--- a/app/src/main/res/layout/change_password.xml
+++ b/app/src/main/res/layout/change_password.xml
@@ -47,7 +47,8 @@
                 android:textSize="26dp"
                 android:text="G"
                 android:background="@drawable/cng_pass_circle"
-                android:gravity="center_vertical" />
+                android:gravity="center_vertical"
+                android:fontFamily="@font/roboto_medium"/>
 
 
             <android.support.design.widget.TextInputLayout
@@ -62,7 +63,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Current Password"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword"
+                    android:fontFamily="@font/roboto_regular"/>
             </android.support.design.widget.TextInputLayout>
 
 
@@ -78,7 +80,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="New Password"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword"
+                    android:fontFamily="@font/roboto_regular"/>
             </android.support.design.widget.TextInputLayout>
 
 
@@ -95,7 +98,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Confirm Password"
-                    android:inputType="textPassword"/>
+                    android:inputType="textPassword"
+                    android:fontFamily="@font/roboto_regular"/>
             </android.support.design.widget.TextInputLayout>
 
 
@@ -109,7 +113,8 @@
                 android:layout_marginBottom="24dp"
                 android:background="@color/green"
                 android:padding="12dp"
-                android:text="Save"/>
+                android:text="Save"
+                android:fontFamily="@font/roboto_medium"/>
 
 
 
