--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -27,7 +27,8 @@
         android:textAlignment="center"
         android:textSize="23dp"
         android:background="@drawable/profile_circle"
-        android:gravity="center_vertical" />
+        android:gravity="center_vertical"
+        android:fontFamily="@font/roboto_medium"/>
 
 
     <TextView
@@ -37,6 +38,6 @@
         android:textColor="@color/white"
         android:textSize="14sp"
         android:layout_marginTop="10dp"
-        android:textStyle="bold"/>
+       android:fontFamily="@font/roboto_bold"/>
 
 </LinearLayout>
