--- a/app/src/main/res/layout/home_two_product_item.xml
+++ b/app/src/main/res/layout/home_two_product_item.xml
@@ -37,7 +37,8 @@
                 android:gravity="left"
                 android:text="Title"
                 android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:fontFamily="@font/roboto_bold"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -48,7 +49,8 @@
                 android:text="Price"
                 android:textSize="15dp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/item_price" />
+                android:id="@+id/item_price"
+                android:fontFamily="@font/roboto_medium"/>
 
 
 
@@ -69,7 +71,8 @@
                     android:gravity="left"
                     android:layout_weight="1"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:id="@+id/qnty" />
+                    android:id="@+id/qnty"
+                    android:fontFamily="@font/roboto_medium"/>
 
 
 
@@ -86,6 +89,7 @@
                         android:layout_height="30dp"
                         android:background="@color/whiteshadow"
                         android:textColor="@color/colorPrimary"
+                        android:fontFamily="@font/roboto_bold"
                         android:text="-" />
 
                     <TextView
@@ -95,7 +99,8 @@
                         android:gravity="center"
                         android:textColor="@color/colorPrimary"
                         android:text="0"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        android:fontFamily="@font/roboto_medium"/>
 
                     <Button
                         android:id="@+id/increase"
@@ -104,7 +109,8 @@
                         android:background="@color/whiteshadow"
                         android:textColor="@color/colorPrimary"
                         android:onClick="increaseInteger"
-                        android:text="+" />
+                        android:text="+"
+                        android:fontFamily="@font/roboto_bold"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -118,7 +124,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:textSize="13dp"
-                android:text="Add to Cart" />
+                android:text="Add to Cart"
+                android:fontFamily="@font/roboto_medium"/>
 
 
         </LinearLayout>
