--- a/app/src/main/res/layout/toolbar_category_home_2.xml
+++ b/app/src/main/res/layout/toolbar_category_home_2.xml
@@ -16,5 +16,6 @@
         android:text="Menu"
         android:textColor="@color/white"
         android:layout_gravity="center"
-        android:id="@+id/toolbar_title" />
+        android:id="@+id/toolbar_title"
+        android:fontFamily="@font/roboto_medium"/>
 </android.support.v7.widget.Toolbar>
