--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -51,7 +51,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="textEmailAddress"
-                    android:hint="Email" />
+                    android:hint="Email"
+                    android:fontFamily="@font/roboto_regular"/>
             </android.support.design.widget.TextInputLayout>
 
             <!-- Password Label -->
@@ -83,7 +84,8 @@
                 android:layout_marginBottom="24dp"
                 android:text="No account yet? Create one"
                 android:gravity="center"
-                android:textSize="16dip"/>
+                android:textSize="16dip"
+                android:fontFamily="@font/roboto_regular"/>
 
         </LinearLayout>
     </ScrollView>
