--- a/app/src/main/res/layout/activity_scanner.xml
+++ b/app/src/main/res/layout/activity_scanner.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.app.ecommerce.walnutstores.app.ecommerce.barcode.ScannerActivity">
+    tools:context="com.app.ecommerce.barcode.ScannerActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
