--- a/app/src/main/res/layout/add_address.xml
+++ b/app/src/main/res/layout/add_address.xml
@@ -41,7 +41,8 @@
                 android:layout_marginTop="40dp"
                 android:text="Address Suggestions"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
 
             <AutoCompleteTextView
@@ -49,7 +50,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:ems="10"/>
+                android:ems="10"
+                android:fontFamily="@font/roboto_regular"/>
 
 
             <TextView
@@ -58,7 +60,8 @@
                 android:layout_marginTop="40dp"
                 android:text="First Name"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <EditText
                 android:id="@+id/fname"
@@ -66,7 +69,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <TextView
                 android:layout_width="fill_parent"
@@ -74,7 +78,8 @@
                 android:layout_marginTop="40dp"
                 android:text="Last Name"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <EditText
                 android:id="@+id/lname"
@@ -82,7 +87,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <TextView
                 android:layout_width="fill_parent"
@@ -90,14 +96,16 @@
                 android:layout_marginTop="40dp"
                 android:text="Address"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:id="@+id/current_address"
-                android:lines="5"/>
+                android:lines="5"
+                android:fontFamily="@font/roboto_regular"/>
 
             <TextView
                 android:layout_width="fill_parent"
@@ -105,7 +113,8 @@
                 android:layout_marginTop="40dp"
                 android:text="Land Mark"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <EditText
                 android:id="@+id/landmark"
@@ -113,7 +122,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <TextView
                 android:layout_width="fill_parent"
@@ -121,7 +131,8 @@
                 android:layout_marginTop="40dp"
                 android:text="City"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <EditText
                 android:id="@+id/city"
@@ -129,7 +140,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
 
             <TextView
@@ -138,7 +150,8 @@
                 android:layout_marginTop="40dp"
                 android:text="State"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <EditText
                 android:id="@+id/state"
@@ -146,7 +159,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
 
             <TextView
@@ -155,7 +169,8 @@
                 android:layout_marginTop="40dp"
                 android:text="Country"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <EditText
                 android:id="@+id/cntry"
@@ -163,7 +178,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
 
             <TextView
@@ -172,7 +188,8 @@
                 android:layout_marginTop="40dp"
                 android:text="PINCODE"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <EditText
                 android:id="@+id/pin"
@@ -180,7 +197,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
 
             <TextView
@@ -189,7 +207,8 @@
                 android:layout_marginTop="40dp"
                 android:text="Telephone"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
             <EditText
                 android:id="@+id/phone"
@@ -197,7 +216,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
 
             <CheckBox
@@ -205,14 +225,16 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
-                android:text="Mark as a Default Billing" />
+                android:text="Mark as a Default Billing"
+                android:fontFamily="@font/roboto_regular"/>
 
             <CheckBox
                 android:id="@+id/checkBox_shipping"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="Mark as a Default Shiiping" />
+                android:text="Mark as a Default Shiiping"
+                android:fontFamily="@font/roboto_regular"/>
 
             <android.support.v7.widget.AppCompatButton
                 android:layout_width="fill_parent"
@@ -223,7 +245,8 @@
                 android:background="@drawable/button_border"
                 android:padding="12dp"
                 android:onClick="saveaddr"
-                android:text="Save"/>
+                android:text="Save"
+                android:fontFamily="@font/roboto_bold"/>
 
         </LinearLayout>
 
