--- a/app/src/main/res/layout/drawer_item.xml
+++ b/app/src/main/res/layout/drawer_item.xml
@@ -20,5 +20,6 @@
         android:textColor="@color/blackshadow"
         android:text="Menu Item"
         android:layout_marginLeft="10dp"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:fontFamily="@font/roboto_medium"/>
 </LinearLayout>
