--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -51,7 +51,8 @@
                     android:textSize="26dp"
                     android:text="G"
                     android:background="@drawable/profile_circle"
-                    android:gravity="center_vertical" />
+                    android:gravity="center_vertical"
+                    android:fontFamily="@font/roboto_medium"/>
 
             </LinearLayout>
 
@@ -77,7 +78,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
-                        android:hint="First Name"/>
+                        android:hint="First Name"
+                        android:fontFamily="@font/roboto_regular"/>
                 </android.support.design.widget.TextInputLayout>
 
 
@@ -91,7 +93,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="text"
-                        android:hint="Last Name"/>
+                        android:hint="Last Name"
+                        android:fontFamily="@font/roboto_regular"/>
                 </android.support.design.widget.TextInputLayout>
 
 
@@ -105,7 +108,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textEmailAddress"
-                        android:hint="Email" />
+                        android:hint="Email"
+                        android:fontFamily="@font/roboto_regular"/>
                 </android.support.design.widget.TextInputLayout>
 
 
@@ -118,7 +122,8 @@
                     android:layout_marginBottom="24dp"
                     android:background="@color/green"
                     android:padding="12dp"
-                    android:text="Save"/>
+                    android:text="Save"
+                    android:fontFamily="@font/roboto_medium"/>
 
 
 
