--- a/app/src/main/res/layout/fail.xml
+++ b/app/src/main/res/layout/fail.xml
@@ -40,7 +40,8 @@
                 android:layout_marginBottom="24dp"
                 android:text="Order Failed"
                 android:gravity="center"
-                android:textSize="16dip"/>
+                android:textSize="16dip"
+                android:fontFamily="@font/roboto_medium"/>
 
         </LinearLayout>
     </ScrollView>
