--- a/app/src/main/res/layout/gallery_item_small.xml
+++ b/app/src/main/res/layout/gallery_item_small.xml
@@ -44,7 +44,8 @@
                 android:gravity="left"
                 android:text="Title"
                 android:textStyle="bold"
-                android:textAppearance="?android:attr/textAppearanceLarge" />
+                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:fontFamily="@font/roboto_bold"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -55,7 +56,8 @@
                 android:text="Price"
                 android:textSize="15dp"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:id="@+id/item_price" />
+                android:id="@+id/item_price"
+                android:fontFamily="@font/roboto_medium"/>
 
 
 
@@ -76,7 +78,8 @@
                     android:gravity="left"
                     android:layout_weight="1"
                     android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:id="@+id/qnty" />
+                    android:id="@+id/qnty"
+                    android:fontFamily="@font/roboto_medium"/>
 
 
 
@@ -93,7 +96,8 @@
                         android:layout_height="30dp"
                         android:background="@color/whiteshadow"
                         android:textColor="@color/colorPrimary"
-                        android:text="-" />
+                        android:text="-"
+                        android:fontFamily="@font/roboto_bold"/>
 
                     <TextView
                         android:id="@+id/integer_number"
@@ -102,7 +106,8 @@
                         android:gravity="center"
                         android:textColor="@color/colorPrimary"
                         android:text="0"
-                        android:textSize="13sp" />
+                        android:textSize="13sp"
+                        android:fontFamily="@font/roboto_medium"/>
 
                     <Button
                         android:id="@+id/increase"
@@ -111,7 +116,8 @@
                         android:background="@color/whiteshadow"
                         android:textColor="@color/colorPrimary"
                         android:onClick="increaseInteger"
-                        android:text="+" />
+                        android:text="+"
+                        android:fontFamily="@font/roboto_bold"/>
                 </LinearLayout>
 
          </LinearLayout>
@@ -125,7 +131,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
                 android:textSize="13dp"
-                android:text="Add to Cart" />
+                android:text="Add to Cart"
+                android:fontFamily="@font/roboto_medium"/>
 
 
         </LinearLayout>
