--- a/app/src/main/res/layout/home_page_list_of_products.xml
+++ b/app/src/main/res/layout/home_page_list_of_products.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/txt_DealOfDay"
-        android:layout_marginBottom="10dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="10dp"
+        android:fontFamily="@font/roboto_bold"
         android:padding="10dp"
+        android:text="@string/txt_ListProducts"
         style="@style/CodeFont"/>
+
     <com.mindorks.placeholderview.PlaceHolderView
-        android:id="@+id/placeholderviewDealofDay"
+        android:id="@+id/placeholderviewListProducts"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"/>
+        android:scrollbars="vertical" />
 </LinearLayout>
