--- a/app/src/main/res/layout/home_three_feed_heading.xml
+++ b/app/src/main/res/layout/home_three_feed_heading.xml
@@ -31,7 +31,8 @@
     android:gravity="center"
     android:layout_marginLeft="7dp"
     android:layout_toRightOf="@id/itemIcon"
-    android:textSize="13sp" />
+    android:textSize="13sp"
+    android:fontFamily="@font/roboto_medium"/>
 <ImageView
     android:layout_width="wrap_content"
     android:layout_height="60dp"
