--- a/app/src/main/res/layout/home_two_category_item.xml
+++ b/app/src/main/res/layout/home_two_category_item.xml
@@ -29,13 +29,14 @@
         <TextView
             android:id="@+id/headingTxt"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:layout_gravity="center_horizontal"
             android:textSize="20dp"
             android:textAlignment="center"
             android:text="Menu Item"
-            android:textColor="@color/blackshadow" />
+            android:textColor="@color/blackshadow"
+            android:fontFamily="@font/roboto_medium"/>
         <!--<ImageView
             android:layout_width="wrap_content"
             android:layout_height="60dp"
