--- a/app/src/main/res/layout/location.xml
+++ b/app/src/main/res/layout/location.xml
@@ -41,7 +41,8 @@
                 android:layout_marginTop="40dp"
                 android:text="Name"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_medium"/>
 
             <EditText
                 android:id="@+id/name"
@@ -49,7 +50,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
 
 
@@ -59,7 +61,8 @@
                 android:layout_marginTop="40dp"
                 android:text="Phone Number"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_medium"/>
 
             <EditText
                 android:id="@+id/mobile"
@@ -67,7 +70,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:ems="10"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
 
 
@@ -77,7 +81,8 @@
                 android:layout_marginTop="40dp"
                 android:text="Date"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_medium"/>
 
             <EditText
                 android:id="@+id/date"
@@ -87,7 +92,8 @@
                 android:ems="10"
                 android:text=""
                 android:focusable="false"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_regular"/>
 
 
 
@@ -97,14 +103,14 @@
                 android:layout_marginTop="40dp"
                 android:text="Time Slot"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_medium"/>
 
             <Spinner
                 android:id="@+id/spinner"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="0dp"
-                />
+                android:layout_marginTop="0dp" />
 
 
             <TextView
@@ -113,14 +119,16 @@
                 android:layout_marginTop="40dp"
                 android:text="Address"
                 android:textColor="@color/grey"
-                android:inputType="text" />
+                android:inputType="text"
+                android:fontFamily="@font/roboto_medium"/>
 
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="0dp"
                 android:id="@+id/current_address"
-                android:lines="10"/>
+                android:lines="10"
+                android:fontFamily="@font/roboto_regular"/>
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/request"
@@ -132,7 +140,8 @@
                 android:background="@drawable/button_border"
                 android:padding="12dp"
                 android:onClick="onRequest"
-                android:text="Send Request"/>
+                android:text="Send Request"
+                android:fontFamily="@font/roboto_medium"/>
 
         </LinearLayout>
 
