--- a/app/src/main/res/layout/notification_items.xml
+++ b/app/src/main/res/layout/notification_items.xml
@@ -38,7 +38,8 @@
                     android:gravity="center"
                     android:layout_alignParentLeft="true"
                     android:layout_marginRight="10dp"
-                    android:textSize="17sp" />
+                    android:textSize="17sp"
+                    android:fontFamily="@font/roboto_medium"/>
 
                 </LinearLayout>
 
@@ -56,7 +57,8 @@
                     android:gravity="center"
                     android:layout_alignParentLeft="true"
                     android:layout_marginRight="10dp"
-                    android:textSize="13sp" />
+                    android:textSize="13sp"
+                    android:fontFamily="@font/roboto_regular"/>
 
             </LinearLayout>
 
@@ -74,7 +76,8 @@
                     android:gravity="center"
                     android:layout_alignParentLeft="true"
                     android:layout_marginRight="10dp"
-                    android:textSize="13sp" />
+                    android:textSize="13sp"
+                    android:fontFamily="@font/roboto_regular"/>
 
 
             </LinearLayout>
