--- a/app/src/main/res/layout/welcome_slide2.xml
+++ b/app/src/main/res/layout/welcome_slide2.xml
@@ -35,7 +35,7 @@
             android:text="Buy Groceries at Lowest Prices"
             android:textColor="#01cdc1"
             android:layout_marginTop="30dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/roboto_medium"
             android:gravity="center"
             android:textSize="@dimen/slide_title" />
 
@@ -48,7 +48,8 @@
             android:text="India's First technology enabled grocery store"
             android:textAlignment="center"
             android:textColor="#cdcdcd"
-            android:textSize="@dimen/slide_desc" />
+            android:textSize="@dimen/slide_desc"
+            android:fontFamily="@font/roboto_medium"/>
 
     </LinearLayout>
 </RelativeLayout>
